[package]
name = "matecito-dll"
version = "0.1.0"
authors = ["Blas Rodriguez Irizar <rodrigblas@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/blasrodri/matecito-dll"
description = "Doubly Linked List backing Matecito"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
matecito = []